Tweaking docs, simplify batch response a bit for readability, add CNAME record

--- a/index.html
+++ b/index.html
@@ -54,13 +54,8 @@ github_url: https://github.com/socialradar/batch-request
     <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.
   </p>
   <p>
-    <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://socialradar.github.io/batch-request" data-text="Batch Request: Utility library to enable a server to handle batch requests" data-count="horizontal" data-via="socialradarapp">Tweet</a>
+    Proudly written by:<br /><a href="http://www.socialradar.com"><img src="social-radar-black-orange.png"></a>
   </p>
-  <p>
-    Written by: <a href="http://www.socialradar.com"><img src="social-radar-black-orange.png"></a>
-  </p>
-  <h3 id=npm>NPM</h3>
-  <div class="highlight<><pre><code class="bash">npm install --save batch-request</code></pre></div>
   <p><a href="https://nodei.co/npm/batch-request/"><img src="https://nodei.co/npm/batch-request.png?downloads=true"></a></p>  
   <p>
     Or <b><a href="{{ page.github_url }}">grab the latest version on Github</a></b>.
@@ -73,9 +68,10 @@ github_url: https://github.com/socialradar/batch-request
       <iframe src="http://ghbtns.com/github-btn.html?user=socialradar&repo=batch-request&type=fork&count=true"
       allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </li>
+    <li>
+      <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://socialradar.github.io/batch-request" data-text="Batch Request: Utility library to enable a server to handle batch requests" data-count="horizontal" data-via="socialradarapp">Tweet</a>
+      <a href="https://travis-ci.org/socialradar/batch-request"><img src="https://travis-ci.org/socialradar/batch-request.png"></a>
   </ul>
-
-  <a href="https://travis-ci.org/socialradar/batch-request"><img src="https://travis-ci.org/socialradar/batch-request.png"></a>
 
   <section id=documentation>
     <hr>
