--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "Batch Request"
 layout: default
 description: >
   Utility library to enable a server to handle batch requests
-version: 0.0.1
+version: 0.0.2
 github_url: https://github.com/socialradar/batch-request
 ---
 
@@ -46,7 +46,10 @@ github_url: https://github.com/socialradar/batch-request
   <h1>Batch Request</h1>
 
   <p>
-    <b>Batch Request</b> is a lightweight library for <a href="http://nodejs.org">Node.js</a> which allows clients to send multiple requests to a server running Node.js in batch.
+    <b>Batch Request</b> is lightweight connect/express middleware for <a href="http://nodejs.org">Node.js</a> which allows clients to send multiple requests to a server running Node.js in batch.
+  </p>
+  <p>
+  It is essentially a wrapper around <a href="https://github.com/mikeal/request">mikeal's request library</a> and adds the ability for a client to send a single request that represents many, have them all run, then return a single response.
   </p>
   <p>
     <b>Batch Request</b> is open source software and is released under the
