Add documentation on dependencies

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ github_url: https://github.com/socialradar/batch-request
     <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.
   </p>
   <p>
-    Proudly written by:<br /><a href="http://www.socialradar.com"><img src="social-radar-black-orange.png"></a>
+    Proudly written in Washington, D.C. by:<br /><a href="http://www.socialradar.com"><img src="social-radar-black-orange.png"></a>
   </p>
   <p><a href="https://nodei.co/npm/batch-request/"><img src="https://nodei.co/npm/batch-request.png?downloads=true"></a></p>  
   <p>
