--- a/index.html
+++ b/index.html
@@ -248,3 +248,16 @@ github_url: https://github.com/socialradar/batch-request
 
   injectScript('http://platform.twitter.com/widgets.js')
 </script>
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '527d4c6b613f5d781100004d');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
